--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "course-matcher",
+  "name": "activity-matcher",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/gui/index.html",
   "scripts": {
     "test": "mocha"
   },
@@ -12,6 +12,7 @@
     "exceljs": "0.2.36",
     "lodash": "4.17.0",
     "log4js": "1.0.1",
+    "vue": "2.1.8",
     "winston": "2.3.0"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "eslint-plugin-promise": "3.4.0",
     "eslint-plugin-standard": "2.0.1",
     "expect.js": "0.3.1",
-    "mocha": "3.2.0"
+    "mocha": "3.2.0",
+    "nw-dev": "3.0.1"
   }
 }
