--- a/package.json
+++ b/package.json
@@ -5,25 +5,26 @@
   "main": "src/main.js",
   "scripts": {
     "test": "mocha",
-    "run": "node_modules/.bin/electron ."
+    "build": "webpack"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "exceljs": "0.2.43",
     "lodash": "4.17.0",
-    "log4js": "1.0.1",
     "vue": "2.1.8",
-    "winston": "2.3.0",
-    "electron": "1.4.15"
+    "xlsx": "0.8.3"
   },
   "devDependencies": {
+    "babel-core": "6.23.1",
+    "babel-loader": "6.3.2",
+    "babel-preset-es2015": "6.22.0",
     "eslint": "3.10.1",
     "eslint-config-standard": "6.2.1",
     "eslint-plugin-promise": "3.4.0",
     "eslint-plugin-standard": "2.0.1",
     "expect.js": "0.3.1",
     "mocha": "3.2.0",
-    "nw-dev": "3.0.1"
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.3.0"
   }
 }
