--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "test": "mocha",
-    "build": "node_modules/.bin/webpack"
+    "build": "node_modules/.bin/webpack -p"
   },
   "author": "",
   "license": "MIT",
