--- a/package.json
+++ b/package.json
@@ -5,25 +5,29 @@
   "main": "src/main.js",
   "scripts": {
     "test": "mocha",
-    "build": "node_modules/.bin/webpack -p"
+    "build": "node_modules/.bin/webpack -p",
+    "dev-server": "node_modules/.bin/webpack-dev-server"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "lodash": "4.17.0",
-    "vue": "2.1.8",
+    "vue": "2.1.10",
+    "vue-loader": "^11.0.0",
     "xlsx": "0.8.3"
   },
   "devDependencies": {
     "babel-core": "6.23.1",
     "babel-loader": "6.3.2",
     "babel-preset-es2015": "6.22.0",
+    "css-loader": "0.26.1",
     "eslint": "3.10.1",
     "eslint-config-standard": "6.2.1",
     "eslint-plugin-promise": "3.4.0",
     "eslint-plugin-standard": "2.0.1",
     "expect.js": "0.3.1",
     "mocha": "3.2.0",
+    "vue-template-compiler": "2.1.10",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3.0"
   }
