--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-standard": "2.0.1",
     "expect.js": "0.3.1",
     "mocha": "3.2.0",
+    "svgo": "^0.7.2",
     "vue-template-compiler": "2.1.10",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3.0"
