--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "3.3.7",
     "lodash": "4.17.0",
     "vue": "2.1.10",
     "vue-loader": "^11.0.0",
@@ -26,8 +27,11 @@
     "eslint-plugin-promise": "3.4.0",
     "eslint-plugin-standard": "2.0.1",
     "expect.js": "0.3.1",
+    "file-loader": "0.10.0",
     "mocha": "3.2.0",
+    "style-loader": "0.13.1",
     "svgo": "^0.7.2",
+    "url-loader": "0.5.7",
     "vue-template-compiler": "2.1.10",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3.0"
