--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --compilers js:babel-core/register",
     "build": "node_modules/.bin/webpack -p",
     "dev-server": "node_modules/.bin/webpack-dev-server"
   },
@@ -14,7 +14,6 @@
     "bootstrap": "3.3.7",
     "lodash": "4.17.0",
     "vue": "2.1.10",
-    "vue-loader": "^11.0.0",
     "xlsx": "0.8.3"
   },
   "devDependencies": {
@@ -32,6 +31,7 @@
     "style-loader": "0.13.1",
     "svgo": "^0.7.2",
     "url-loader": "0.5.7",
+    "vue-loader": "11.0.0",
     "vue-template-compiler": "2.1.10",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3.0"
