--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,23 @@ node_modules/
 .DS_Store
 dist/
 tmp/
+
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
