--- a/package.json
+++ b/package.json
@@ -1,39 +1,35 @@
 {
-  "name": "activity-matcher",
-  "version": "0.0.1",
+  "name": "zuweiser",
+  "version": "0.1.0",
+  "private": true,
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register",
-    "build": "node_modules/.bin/webpack -p",
-    "dev-server": "node_modules/.bin/webpack-dev-server"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit"
   },
-  "author": "",
+  "author": "dev@bjoern.mosler.ch",
   "license": "MIT",
   "dependencies": {
     "bootstrap": "3.3.7",
-    "lodash": "4.17.0",
-    "vue": "2.1.10",
-    "xlsx": "0.8.3"
+    "lodash": "4.17.15",
+    "vue": "2.6.10",
+    "vue-class-component": "7.0.2",
+    "vue-property-decorator": "8.1.0",
+    "xlsx": "0.15.1"
   },
   "devDependencies": {
-    "babel-core": "6.23.1",
-    "babel-loader": "6.3.2",
-    "babel-preset-es2015": "6.22.0",
-    "css-loader": "0.26.1",
-    "eslint": "3.10.1",
-    "eslint-config-standard": "6.2.1",
-    "eslint-plugin-promise": "3.4.0",
-    "eslint-plugin-standard": "2.0.1",
-    "expect.js": "0.3.1",
-    "file-loader": "0.10.0",
-    "mocha": "3.2.0",
-    "style-loader": "0.13.1",
-    "svgo": "^0.7.2",
-    "url-loader": "0.5.7",
-    "vue-loader": "11.0.0",
-    "vue-template-compiler": "2.1.10",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0"
+    "@types/chai": "4.1.0",
+    "@types/lodash": "^4.14.137",
+    "@types/mocha": "5.2.4",
+    "@vue/cli-plugin-typescript": "3.11.0",
+    "@vue/cli-plugin-unit-mocha": "3.11.0",
+    "@vue/cli-service": "3.11.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "chai": "4.1.2",
+    "typescript": "3.4.3",
+    "vue-template-compiler": "2.6.10"
   }
 }
