--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "chai": "4.1.2",
     "typescript": "3.4.3",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "2.6.10",
+    "expect.js": "latest"
   }
 }
