--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: yarn install
-      run: yarn install
-    - name: yarn test
-      run: yarn test
-    - name: yarn build
-      run: yarn build 
+    - run: yarn install
+    - run: yarn lint
+    - run: yarn test:unit
+    - run: yarn build 
