--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "dev@bjoern.mosler.ch",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "3.3.7",
     "lodash": "4.17.15",
     "vue": "2.6.10",
     "vue-class-component": "7.0.2",
@@ -29,8 +28,8 @@
     "@vue/cli-service": "3.11.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "chai": "4.1.2",
+    "expect.js": "latest",
     "typescript": "3.4.3",
-    "vue-template-compiler": "2.6.10",
-    "expect.js": "latest"
+    "vue-template-compiler": "2.6.10"
   }
 }
