--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "format": "prettier --write '{tests,src}/**/*.{ts,vue}'"
   },
   "author": "dev@bjoern.mosler.ch",
   "license": "MIT",
   "dependencies": {
     "lodash": "4.17.15",
-    "vue": "2.6.10",
-    "vue-class-component": "7.0.2",
-    "vue-property-decorator": "8.1.0",
-    "xlsx": "0.15.1"
+    "vue": "2.6.11",
+    "xlsx": "0.15.5"
   },
   "devDependencies": {
-    "@types/chai": "4.1.0",
-    "@types/lodash": "^4.14.137",
-    "@types/mocha": "5.2.4",
-    "@vue/cli-plugin-typescript": "3.11.0",
-    "@vue/cli-plugin-unit-mocha": "3.11.0",
-    "@vue/cli-service": "3.11.0",
-    "@vue/test-utils": "1.0.0-beta.29",
-    "chai": "4.1.2",
+    "@types/chai": "4.2.8",
+    "@types/lodash": "4.14.149",
+    "@types/mocha": "7.0.1",
+    "@vue/cli-plugin-typescript": "4.2.2",
+    "@vue/cli-plugin-unit-mocha": "4.2.2",
+    "@vue/cli-service": "4.2.2",
+    "@vue/test-utils": "1.0.0-beta.31",
+    "chai": "4.2.0",
     "expect.js": "latest",
-    "typescript": "3.4.3",
-    "vue-template-compiler": "2.6.10"
+    "prettier": "1.19.1",
+    "typescript": "3.7.5",
+    "vue-template-compiler": "2.6.11"
   }
 }
