--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push]
+on: [ push ]
 
 jobs:
   build:
@@ -8,15 +8,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - run: yarn install
-    - run: yarn lint
-    - run: yarn test:unit
-    - run: yarn build 
-    - run: ls -l
-    - name: Deploy
-      uses: docker://peaceiris/gh-pages:v2
-      env:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_PAT }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./dist
+      - uses: actions/checkout@v2
+      - run: |
+          yarn install
+          yarn lint
+          yarn test
+          yarn build
+          yarn export
+      - name: Deploy
+        uses: docker://peaceiris/gh-pages:v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_PAT }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: ./out
