--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@ node_modules/
 dist/
 tmp/
 
-/dist
-
 # local env files
 .env.local
 .env.*.local
@@ -22,3 +20,13 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.next/
+*.tsbuildinfo
+
