--- a/package.json
+++ b/package.json
@@ -4,30 +4,36 @@
   "private": true,
   "description": "",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit",
-    "format": "prettier --write '**/*.{ts,vue}'"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "export": "next export",
+    "format": "prettier --write '**/*.{ts,tsx}'",
+    "test": "jest src",
+    "test:watch": "jest src --watch"
   },
   "author": "dev@bjoern.mosler.ch",
   "license": "MIT",
   "dependencies": {
-    "lodash": "4.17.15",
-    "vue": "2.6.11",
-    "xlsx": "0.15.5"
+    "classnames": "2.3.1",
+    "lodash": "4.17.21",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/chai": "4.2.8",
+    "@testing-library/jest-dom": "5.16.2",
+    "@testing-library/react": "12.1.3",
+    "@types/jest": "27.4.0",
     "@types/lodash": "4.14.149",
-    "@types/mocha": "7.0.1",
-    "@vue/cli-plugin-typescript": "4.2.2",
-    "@vue/cli-plugin-unit-mocha": "4.2.2",
-    "@vue/cli-service": "4.2.2",
-    "chai": "4.2.0",
-    "expect.js": "latest",
-    "prettier": "1.19.1",
-    "typescript": "3.7.5",
-    "vue-template-compiler": "2.6.11"
-  }
+    "@types/react": "17.0.38",
+    "eslint": "8.6.0",
+    "eslint-config-next": "12.0.7",
+    "jest": "27.5.1",
+    "prettier": "2.5.1",
+    "ts-jest": "27.1.2",
+    "typescript": "4.5.4"
+  },
+  "packageManager": "yarn@3.1.1"
 }
