--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          yarn install --frozen-lockfile
-          yarn lint
-          yarn test
-          yarn build
-          yarn export
+          npm install
+          npm run lint
+          npm run test
+          npm run build
+          npm run export
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
